add fonts and chatting board

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<title>VN3T</title>
 
 	<link rel="shortcut icon" href="images/favicon.ico"/>
@@ -11,6 +13,7 @@
 	<link rel="stylesheet" href="css/style.css" />
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -135,5 +138,7 @@ https://www.wetrust.io/
 https://www.dentacoin.com/
 </div>
 </section>
+
+<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="31958874-1643-41d9-80b4-49dfc19bc40e";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 </body>
 </html>
