--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="bookmark" href="images/favicon.ico"/>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/countdown.css" />
 	<link rel="stylesheet" href="css/style.css" />
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -109,35 +110,49 @@
 	</div>
 </section>
 <section id="countdown">
-<div id="countdown-change-js">
-<div class="countdown-col">
-<div class="countdown-num countdown-days">0</div>
-<div class="countdown-info">Days</div>
+<div class="countdown-container main-example" id="countdown-counter">
+<div class="time days flip">
+  <span class="count curr top">00</span>
+  <span class="count next top">00</span>
+  <span class="count next bottom">00</span>
+  <span class="count curr bottom">00</span>
+  <span class="label">days</span>
 </div>
-<div class="countdown-col">
-<div class="countdown-num countdown-hours">0</div>
-<div class="countdown-info">Hours</div>
+
+<div class="time hours flip">
+  <span class="count curr top">00</span>
+  <span class="count next top">00</span>
+  <span class="count next bottom">00</span>
+  <span class="count curr bottom">00</span>
+  <span class="label">hours</span>
 </div>
-<div class="countdown-col">
-<div class="countdown-num countdown-minutes">0</div>
-<div class="countdown-info">Minutes</div>
+
+<div class="time minutes flip">
+  <span class="count curr top">00</span>
+  <span class="count next top">00</span>
+  <span class="count next bottom">00</span>
+  <span class="count curr bottom">00</span>
+  <span class="label">min</span>
 </div>
-<div class="countdown-col">
-<div class="countdown-num countdown-seconds">0</div>
-<div class="countdown-info">Seconds</div>
+
+<div class="time seconds flip">
+  <span class="count curr top">00</span>
+  <span class="count next top">00</span>
+  <span class="count next bottom">00</span>
+  <span class="count curr bottom">00</span>
+  <span class="label">sec</span>
 </div>
 </div>
+
 <div>
-count down div
+<a href="https://canya.io/" target="_blank">https://canya.io/</a><br>
+<a href="https://bitair.io/" target="_blank">https://bitair.io/</a><br>
+<a href="https://galaxy-esolutions.com/" target="_blank">https://galaxy-esolutions.com/</a><br>
+<a href="https://serenity-financial.io/" target="_blank">https://serenity-financial.io/</a><br>
 
-https://canya.io/
-https://bitair.io/
-https://galaxy-esolutions.com/
-https://serenity-financial.io/
-
-https://centra.tech/#home
-https://www.wetrust.io/
-https://www.dentacoin.com/
+<a href="https://centra.tech/#home" target="_blank">https://centra.tech/#home</a><br>
+<a href="https://www.wetrust.io/" target="_blank">https://www.wetrust.io/</a><br>
+<a href="https://www.dentacoin.com/" target="_blank">https://www.dentacoin.com/</a><br>
 </div>
 </section>
 
