update pie chart

--- a/index.html
+++ b/index.html
@@ -117,6 +117,40 @@
 <section id="ecosystem">
 	<h1>ECOSYSTEM</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+	<div class="row ecosystem-wireframe-div">
+		<div class="col-sm-3">
+			<table class="ecosystem-table">
+				<tr><td>Provider 1</td></tr>
+				<tr><td>Channel 1 +<br>Virtual Machine 1</td></tr>
+			</table>
+			<p>Data <i class="fa fa-long-arrow-right"></i> Channel</p>
+			<p>Algorithm <i class="fa fa-long-arrow-right"></i> VM</p>
+		</div>
+		<div class="col-sm-3">
+			<table class="ecosystem-table">
+				<tr><td>Provider 2</td></tr>
+				<tr><td>Virtual Machine 2</td></tr>
+			</table>
+			<p>Standard data</p>
+			<p>channel</p>
+		</div>
+		<div class="col-sm-3">
+			<table class="ecosystem-table">
+				<tr><td>Provider 3</td></tr>
+				<tr><td>Channel 3</td></tr>
+			</table>
+			<p>Standard virtual</p>
+			<p>machine</p>
+		</div>
+		<div class="col-sm-3">
+			<table class="ecosystem-table">
+				<tr><td>Provider 3</td></tr>
+				<tr><td>Channel 3</td></tr>
+			</table>
+			<p>Standard virtual</p>
+			<p>machine</p>
+		</div>
+	</div>
 	<img class="ecosystem-image" src="images/ecosystem.png">
 	<h1>ICO DETAILS</h1>
 	<p>The VC01n Pre-Sale runs from December 1st until December 22nd 2017.<br>The Public Sale will begin February 1st 2018. </p>
@@ -219,6 +253,7 @@
 </div>
 </section>
 
+<div id="work-in-progress"><div class="work-spinner"></div></div>
 <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="31958874-1643-41d9-80b4-49dfc19bc40e";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 </body>
 </html>
