--- a/index.html
+++ b/index.html
@@ -205,6 +205,177 @@
 	<h1>ROADMAP</h1>
 	<img src="images/roadmap.png">
 </section>
+<section id="members">
+	<h1>EXECUTIVE MEMBERS</h1>
+	<div class="row exe-members">
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-4">
+			<div class="circle-dashed exe-member exe-member-1">
+			</div>
+			<p>Jean-Philippe Beaudet</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-4">
+			<div class="circle-dashed exe-member exe-member-2">
+			</div>
+			<p>Yves Lamarre</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-4">
+			<div class="circle-dashed exe-member exe-member-3">
+			</div>
+			<p>Mathieu Fanoni</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-4">
+			<div class="circle-dashed exe-member exe-member-4">
+			</div>
+			<p>Daniel Bastien</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-4">
+			<div class="circle-dashed exe-member exe-member-5">
+			</div>
+			<p>Dominique-SébastienForest</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-4">
+			<div class="circle-dashed exe-member exe-member-6">
+			</div>
+			<p></p>
+		</div>
+	</div>
+	<h1>TECHNICAL TEAM</h1>
+	<div class="row">
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-1">
+			</div>
+			<p>Jean-Philippe Beaudet</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-2">
+			</div>
+			<p>Yves Lamarre</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-3">
+			</div>
+			<p>Mathieu Fanoni</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-4">
+			</div>
+			<p>Daniel Bastien</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-5">
+			</div>
+			<p>Dominique-SébastienForest</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-6">
+			</div>
+			<p></p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-7">
+			</div>
+			<p></p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-8">
+			</div>
+			<p></p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-9">
+			</div>
+			<p></p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-10">
+			</div>
+			<p></p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-11">
+			</div>
+			<p></p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-12">
+			</div>
+			<p></p>
+		</div>
+	</div>
+</section>
+<section class="administrative">
+	<h1>ADMINISTRATIVE</h1>
+	<div class="row">
+		<div class="col col-xs-12 col-sm-6">
+			<img src="images/administrative/1.png">
+		</div>
+		<div class="col col-xs-12 col-sm-6">
+			<img src="images/administrative/2.png">
+		</div>
+	</div>
+</section>
+<section class="advisory">
+	<h1>ADVISORY TEAM</h1>
+	<div class="row">
+		<div class="col col-xs-12 col-sm-2 offset-sm-1">
+			<div class="circle-dashed adv-member adv-member-1">
+			</div>
+			<p>Jean-Philippe Beaudet</p>
+		</div>
+		<div class="col col-xs-12 col-sm-2">
+			<div class="circle-dashed adv-member adv-member-2">
+			</div>
+			<p>Yves Lamarre</p>
+		</div>
+		<div class="col col-xs-12 col-sm-2">
+			<div class="circle-dashed adv-member adv-member-3">
+			</div>
+			<p>Mathieu Fanoni</p>
+		</div>
+		<div class="col col-xs-12 col-sm-2">
+			<div class="circle-dashed adv-member adv-member-4">
+			</div>
+			<p>Daniel Bastien</p>
+		</div>
+		<div class="col col-xs-12 col-sm-2">
+			<div class="circle-dashed adv-member adv-member-5">
+			</div>
+			<p>Dominique-SébastienForest</p>
+		</div>
+	</div>
+</section>
+<section id="partners">
+	<h1>PARTNERS</h1>
+	<div class="row">
+		<div class="col col-xs-12 col-sm-6 col-md-3">
+			<div class="partner-bg partner-1"></div>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-3">
+			<div class="partner-bg partner-2"></div>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-3">
+			<div class="partner-bg partner-3"></div>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-3">
+			<div class="partner-bg partner-4"></div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col col-xs-12 col-sm-6 col-md-3">
+			<div class="partner-bg partner-5"></div>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-3">
+			<div class="partner-bg partner-6"></div>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-3">
+			<div class="partner-bg partner-7"></div>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-3">
+			<div class="partner-bg partner-8"></div>
+		</div>
+	</div>
+</section>
+<!--
 <section id="countdown">
 <div class="countdown-container main-example" id="countdown-counter">
 <div class="time days flip">
@@ -252,7 +423,7 @@
 <a href="https://turinginc.io/" target="_blank">https://turinginc.io/</a>
 </div>
 </section>
-
+-->
 <div id="work-in-progress"><div class="work-spinner"></div></div>
 <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="31958874-1643-41d9-80b4-49dfc19bc40e";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 </body>
