--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 				<a class="nav-link" href="#roadmap">ROADMAP</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#team">TEAM</a>
+				<a class="nav-link" href="#members">TEAM</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#advisors">ADVISORS</a>
+				<a class="nav-link" href="#advisory">ADVISORS</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#partners">PARTNERS</a>
@@ -94,7 +94,7 @@
 	<p class="amp">&amp;</p>
 	<p class="description">The monopoly of giants on structured data</p>
 </section>
-<section id="technology">
+<section class="technology">
 	<h1>TECHNOLOGY</h1>
 	<div class="row">
 		<div class="col col-sm-6">
@@ -114,7 +114,7 @@
 		</div>
 	</div>
 </section>
-<section id="ecosystem">
+<section class="ecosystem">
 	<h1>ECOSYSTEM</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
 	<div class="row ecosystem-wireframe-div">
@@ -210,135 +210,325 @@
 	<div class="row exe-members">
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-4">
 			<div class="circle-dashed exe-member exe-member-1">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>President<br>Co-Founder &amp; CTO</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p>Jean-Philippe Beaudet</p>
 		</div>
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-4">
 			<div class="circle-dashed exe-member exe-member-2">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>President<br>Co-Founder &amp; CTO</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p>Yves Lamarre</p>
 		</div>
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-4">
 			<div class="circle-dashed exe-member exe-member-3">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>President<br>Co-Founder &amp; CTO</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p>Mathieu Fanoni</p>
 		</div>
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-4">
 			<div class="circle-dashed exe-member exe-member-4">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>President<br>Co-Founder &amp; CTO</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p>Daniel Bastien</p>
 		</div>
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-4">
 			<div class="circle-dashed exe-member exe-member-5">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>President<br>Co-Founder &amp; CTO</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
-			<p>Dominique-SébastienForest</p>
+			<p>Dominique-Sébastien Forest</p>
 		</div>
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-4">
 			<div class="circle-dashed exe-member exe-member-6">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>President<br>Co-Founder &amp; CTO</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
-			<p></p>
+			<p>Ahmed Al-Bayati</p>
 		</div>
 	</div>
 	<h1>TECHNICAL TEAM</h1>
-	<div class="row">
+	<div class="row tech-members">
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
 			<div class="circle-dashed tech-member tech-member-1">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Technical ICO<br>manager</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
-			<p>Jean-Philippe Beaudet</p>
+			<p>Dmytro Sytnik</p>
 		</div>
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
 			<div class="circle-dashed tech-member tech-member-2">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Technical ICO<br>manager</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p>Yves Lamarre</p>
 		</div>
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
 			<div class="circle-dashed tech-member tech-member-3">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Technical ICO<br>manager</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p>Mathieu Fanoni</p>
 		</div>
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
 			<div class="circle-dashed tech-member tech-member-4">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Technical ICO<br>manager</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p>Daniel Bastien</p>
 		</div>
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
 			<div class="circle-dashed tech-member tech-member-5">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Technical ICO<br>manager</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p>Dominique-SébastienForest</p>
 		</div>
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
 			<div class="circle-dashed tech-member tech-member-6">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Technical ICO<br>manager</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p></p>
 		</div>
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
 			<div class="circle-dashed tech-member tech-member-7">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Technical ICO<br>manager</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p></p>
 		</div>
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
 			<div class="circle-dashed tech-member tech-member-8">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Technical ICO<br>manager</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p></p>
 		</div>
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
 			<div class="circle-dashed tech-member tech-member-9">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Technical ICO<br>manager</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p></p>
 		</div>
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
 			<div class="circle-dashed tech-member tech-member-10">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Technical ICO<br>manager</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p></p>
 		</div>
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
 			<div class="circle-dashed tech-member tech-member-11">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Technical ICO<br>manager</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p></p>
 		</div>
 		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
 			<div class="circle-dashed tech-member tech-member-12">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Technical ICO<br>manager</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
-			<p></p>
+			<p>Julia Fodor</p>
 		</div>
 	</div>
 </section>
 <section class="administrative">
 	<h1>ADMINISTRATIVE</h1>
 	<div class="row">
-		<div class="col col-xs-12 col-sm-6">
+		<div class="col col-xs-12 col-sm-6 administrative-item">
 			<img src="images/administrative/1.png">
+			<div class="administrative-item-info">
+				<p>Accounting: BDO<br>(Canada-Gibralta)<br><span>www</span></p>
+			</div>
 		</div>
-		<div class="col col-xs-12 col-sm-6">
+		<div class="col col-xs-12 col-sm-6 administrative-item">
 			<img src="images/administrative/2.png">
+			<div class="administrative-item-info">
+				<p>Legal: Fasken<br>Martineau Québec<br><span>www</span></p>
+			</div>
 		</div>
 	</div>
 </section>
-<section class="advisory">
+<section id="advisory">
 	<h1>ADVISORY TEAM</h1>
 	<div class="row">
 		<div class="col col-xs-12 col-sm-2 offset-sm-1">
 			<div class="circle-dashed adv-member adv-member-1">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>AI</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p>Jean-Philippe Beaudet</p>
 		</div>
 		<div class="col col-xs-12 col-sm-2">
 			<div class="circle-dashed adv-member adv-member-2">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>AI</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p>Yves Lamarre</p>
 		</div>
 		<div class="col col-xs-12 col-sm-2">
 			<div class="circle-dashed adv-member adv-member-3">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>AI</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p>Mathieu Fanoni</p>
 		</div>
 		<div class="col col-xs-12 col-sm-2">
 			<div class="circle-dashed adv-member adv-member-4">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>AI</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p>Daniel Bastien</p>
 		</div>
 		<div class="col col-xs-12 col-sm-2">
 			<div class="circle-dashed adv-member adv-member-5">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>AI</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<p>Dominique-SébastienForest</p>
 		</div>
